--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,10 @@
-<div class="center jumotron">
-  <div class="text-center">
-    <h1>Welcome to the Microposts</h1>
-  </div>
-</div>
+<% if logged_in? %>
+  <p>ログイン完了ユーザー: <% current_user.name %></p>
+<% else %>
+    <div class="center jumotron">
+      <div class="text-center">
+        <h1>Welcome to the Microposts</h1>
+        <%= link_to 'sing up now!', singup_path, class: 'btn btn-lg btn-primary' %>
+      </div>
+    </div>
+<% end %>
