--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
               </ul>
             </li>
           <% else %>
-            <li><%= link_to 'Singup', singup_path %></li>
+            <li><%= link_to 'Signup', signup_path %></li>
             <li><%= link_to 'Login', login_path %></li>
           <% end %>
         </ul>
