--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     
     <div class="container">
       <%= render 'layouts/flash_messages' %>
-      
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
     
