--- a/app/views/users/favarites.html.erb
+++ b/app/views/users/favarites.html.erb
@@ -17,6 +17,6 @@
       <li class="<%= 'active' if current_page?(followers_user_path(@user)) %>"><%= link_to followers_user_path(@user) do %>Followers <span class="badge"><%= @count_followers %></span><% end %></li>
       <li class="<%= 'active' if current_page?(favarites_user_path(@user)) %>"><%= link_to favarites_user_path(@user) do %>Favorits <span class="badge"><%= @count_favarites %></span><% end %></li>
     </ul>
-    <%= render 'users', users: @followings %>
+    <%= render 'microposts/microposts', microposts: @microposts %>
   </div>
 </div>
